# cargo-lambda-axum-example

./: .gitignore  Cargo.toml
infra/: main.tf  variables.tf
src/: error.rs  example_endpoint.rs  main.rs
