[package]
name = "cargo-lambda-axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "json"] }
lambda_http = "0.14.0"
thiserror = "2.0.11"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
